# fastapi-start

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  local.db  pyproject.toml
alembic/: env.py
alembic/versions/: 3d7d807cacfe_create_user_table.py  4f80c20e99a3_create_user_table.py
fastapi_start/: database.py  fast_api_job.py  job.py  job_inject.py  main.py  repository.py  settings.py
tests/: conftest.py  in_test_database.py  test_job.py  test_main.py  test_repository.py  test_web.py
