[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Grégoire Deveaux <ggdx@laposte.net>"]
description = ""
name = "fastapi-start"
packages = [{include = "fastapi_start"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.97.0"
python = "^3.11"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
mypy = "^1.3.0"
pytest = "^7.3.2"

[tool.ruff]
select = ["A", "ARG", "ASYNC", "BLE", "E", "ERA", "F", "I", "N", "PL", "PT", "RET", "RUF", "S", "SIM", "T20", "TCH", "TID", "UP", "W"]

[tool.ruff.isort]
force-single-line = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # S101: Use of assert

[tool.tomlsort]
all = true
